fixed version_alias textbox alignment

--- a/templatestore/frontend/src/style/templateScreen.less
+++ b/templatestore/frontend/src/style/templateScreen.less
@@ -138,8 +138,7 @@ h5 {
 
 .teVersionAlias {
     padding-left: 20px;
-    float: right;
-    margin-left: 50px;
+    margin-left: 70%;
     border: 1px solid #9ca1a7;
     border-radius: 5px;
     color: #000;
